# spicex

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  config.json
.kiro/specs/viper-rust/: design.md  requirements.md  tasks.md
examples/: basic_usage.rs  cli_application.rs  cli_flag_usage.rs  default_values_usage.rs  env_layer_usage.rs  file_discovery_usage.rs  file_watching.rs  microservice_config.rs  migration_guide.rs  nested_access_usage.rs  performance_benchmarks.rs  real_world_usage.rs  spice_core_integration.rs  struct_deserialization.rs  web_server_config.rs
src/: cli.rs  config.rs  default_layer.rs  env_layer.rs  error.rs  file_layer.rs  layer.rs  lib.rs  parser.rs  value.rs  watcher.rs
tests/: file_watching_integration.rs  integration_tests.rs  struct_deserialization_integration.rs
